corrected alignment of resume link on firefox

--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -73,7 +73,6 @@ h1 {
   width: 30px;
 }
 .resume {
-  margin-top: -5px;
   text-align: center;
 }
 .small {
